--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 /* font  */
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
 }
 
 body {
@@ -61,6 +62,7 @@ button:hover{
     box-shadow: 2px 2px 10px ;
     cursor: pointer;
     color: black;
+    border: none;
 }
 
 /* section */
@@ -76,7 +78,7 @@ button:hover{
     padding: 20px;
 }
 
-footer {
+footer{
   text-align: center;
   background-color: #fff;
   padding: 16px 0;
@@ -95,4 +97,44 @@ footer {
     .icon{
         transform: scale(0.5);
     }
+}
+
+.box{
+    height: 396px;
+    width: 458px;
+    margin: 0 auto;
+    backdrop-filter: blur(10px);
+    background-color: rgb(221, 217, 217);
+    transform: scale(1.2);
+    box-shadow: 2px 2px 333px black;
+    border-radius: 10px;
+    padding: 20px;
+    background: linear-gradient(to bottom, white 0%, rgb(207 207 228) 30%, rgb(135 135 204 / 42%) 70%, rgb(143 143 220 / 82%) 100%);
+}
+
+.inputlabel{
+    font-size: 20px;
+    margin-bottom: 40px;
+    font-size: 40px;
+}
+
+.input{
+    border-radius: 5px; 
+    border: none; 
+    font-size: 30px; 
+    margin-top: 40px;
+    font-family: DMSerifText;
+}
+
+.input:hover{
+    transform: scale(1.01);
+    box-shadow: 2px 2px 10px black;
+
+}
+
+.add_expense{
+    margin: 40px;
+    height: 58px;
+    width: 300px;
+    background-color: orange;
 }
